# TrainingProject

src/: CMakeLists.txt  main.cpp
src/common/: message.cpp  message.h
src/manager/: base_manager.cpp  base_manager.h
src/service/: message_receiver.cpp  message_receiver.h  message_sender.cpp  message_sender.h  message_service.cpp  message_service.h  task_scheduler.cpp  task_scheduler.h
